# Crafting-A-Game-Engine

./: CMakeLists.txt  CMakePresets.json  README.md  diagrams.drawio
demos/: CMakeLists.txt  README.md
demos/basic_loop/: CMakeLists.txt  main.cpp
demos/bouncing_ball/: CMakeLists.txt  main.cpp
demos/bouncing_ball_1/: CMakeLists.txt  main.cpp
demos/bouncing_ball_2/: CMakeLists.txt  main.cpp
demos/bouncing_ball_3/: CMakeLists.txt  main.cpp
demos/bouncing_ball_4/: CMakeLists.txt
demos/bouncing_balls/: BallSystem.hpp  CMakeLists.txt  ISystem.hpp  WindowSystem.hpp  main.cpp
